--- a/blogpost.html
+++ b/blogpost.html
@@ -7,11 +7,12 @@
 
 <body>
     <div id="container">
-        <div id="cabecera">Hyperblog <span id="tagline">Tu blog de confianza</span></div>
+        <div id="cabecera">Hyperblog <span id="tagline">Tu blog maestro</span></div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p> Y este es el parrofo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
             <p>Los blog son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Except si eres un rock estar. Pero estadisticamente no lo eres... por ahora.</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
