--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,8 @@
             <p>Los blog son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Except si eres un rock estar. Pero estadisticamente no lo eres... por ahora.</p>
             <p>Suscribete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi</div>
     </div>
 </body>
 
